# Activity-Detection

./: README.md
Foreground-Background_Segmentation_for_Video-master/: CMakeCache.txt  CMakeLists.txt  Foreground-Background_Segmentation_for_Video-master.cbp  Makefile  SCGMM_JTOld.h  cmake_install.cmake  demoResults.tar  main  main.cpp  temp.cpp
Foreground-Background_Segmentation_for_Video-master/include/: SCGMM_JT.h  utils.h
literatureReviews/: MonocularVideoFG_BGSegmentationUsingSCGMM.odt
