cmake_minimum_required(VERSION 3.4)
project( Foreground-Background_Segmentation_for_Video-master )
#set(OpenCV_DIR /media/akhil/Code1/Softwares/opencv-3.4.6Linux/build)
find_package( OpenCV 3.4.6 REQUIRED  )
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/include )
add_executable( main main.cpp temp.cpp)
target_link_libraries( main ${OpenCV_LIBS} )
